fixed bug with node titles not visible

--- a/css/view/node-view.scss
+++ b/css/view/node-view.scss
@@ -9,7 +9,7 @@
 .node-view.group-view {
    background: lightskyblue !important;
 
-   .title-label {
+   .title-label:first-child {
       visibility: hidden;
    }
 
